k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hlf-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hlf-client.chikitsa.io
    http:
      paths:
      - path: /4001
        pathType: Prefix
        backend:
          service:
            name: hlf-client-svc
            port:
              number: 3000
      - path: /5001
        pathType: Prefix
        backend:
          service:
            name: hlf-client-svc
            port:
              number: 3000
      - path: /8080
        pathType: Prefix
        backend:
          service:
            name: hlf-client-svc
            port:
              number: 3000
